Fix tile spacing between rows by changing to block instead of inline-blk

--- a/css/index.css
+++ b/css/index.css
@@ -12,7 +12,7 @@
     width: 100%;
     height: 100%;
     display: table;
-    padding: 5% 0 5% 0;
+    padding: 8% 0 8% 0;
 }
 
 html {
